--- a/src/content/ideas/2025/mscs/index.mdx
+++ b/src/content/ideas/2025/mscs/index.mdx
@@ -37,7 +37,7 @@ My plan is to tailor my studies around two specializations: Machine Learning and
 After a demanding first semester, I took a three-month sabbatical to travel through Europe, returning refreshed and ready for the next challenge.
 
 🍂 Fall 2024:
-  - CS 7641: Machine Learning (ML)
+  - [CS 7641: Machine Learning (ML)](/ideas/2025/ml-retro/)
   - CS 6290: High Performance Computer Architecture (HPCA)
 
 🌱 Spring 2025:
